# navi

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/dtos/: cv_dtos.py  poi_full_dto.py  poi_partial_dto.py  poi_rating_dto.py  review_dto.py
backend/models/: category_enum.py  category_user_rating.py  poi.py  poi_full_dto.py  poi_partial_dto.py  poi_ratings.py  review.py  user_preferences.py
backend/routers/: cv_router.py  places_router.py  ratings_router.py  reviews_router.py
backend/services/: cv_service.py  places_service.py  ratings_service.py  reviews_service.py
frontend/: .env.example  .gitignore  app.json  package-lock.json  package.json  tsconfig.json
frontend/app/: camera-back.tsx  index.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx
frontend/components/: BottomSheet.tsx  LocationItem.tsx  MapComponent.tsx  PlaceDetailsScreen.tsx  SettingsModal.tsx  VoiceOverPlacesList.tsx
frontend/data/: mockLocations.ts
frontend/hooks/: useMainScreen.ts
frontend/services/: placesApi.ts
