[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.59.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo[srv]>=4.16.0",
    "pyngrok>=7.5.0",
    "uvicorn>=0.40.0",
]
